# devopswithkubernetes

./: .gitignore  README.md
part1/01/: README.md
part1/02/: README.md
part1/03/: README.md
part1/03/log_output/: Dockerfile  log_output.py
part1/04/: Dockerfile  README.md
part1/04/manifests/: deployment.yaml
part1/05/: Dockerfile  README.md
part1/06/: README.md
part1/06/manifests/: deployment.yaml  service.yaml
part1/07/: Dockerfile  README.md  log_output.py
part1/07/manifests/: deployment.yaml
part1/08/: README.md  pyproject.toml
part1/08/manifests/: deployment.yaml  service.yaml
part1/09/: README.md  ping_pong.py
part1/09/log_output/: log_output.py
part1/09/manifests/: deployment-logoutput.yaml  deployment.yaml  ingress.yaml  service-pingpong.yaml
part1/09/ping_pong/: Dockerfile
part1/10/: README.md
part1/10/log_output/: Dockerfile  log_output.py
part1/10/manifests/: deployment.yaml
part1/10/show_output/: Dockerfile  show_output.py
part1/11/: README.md
part1/11/log_output/: Dockerfile  log_output.py
part1/11/manifests/: deployment-logoutput.yaml  deployment-pingpong.yaml  deployment.yaml  ingress.yaml
part1/11/manifests-volumes/: persistentvolume.yaml  persistentvolumeclaim.yaml
part1/11/ping_pong/: Dockerfile  ping_pong.py
part1/12/: Dockerfile  README.md  pyproject.toml
part1/13/: README.md
part2/01/: README.md
part2/02/: README.md
part2/03/: README.md
part2/04/: README.md  run_dev.sh
part2/04/todo-backend/: Dockerfile  pyproject.toml
part2/04/todo-backend/todo/todo/: models.py  settings.py
(+63 files in other folders)
