[project]
name = "todo-backend"
version = "0.1.0"
description = "Project for the course DevopsWithKubernetes"
readme = "README.md"
authors = ["Ivan Kharlamov <the.paper.men@gmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "django-ninja>=1.3.0",
    "django==5.1.4",
    "django-ninja-crud>=0.6.2",
    "django-cors-headers>=4.6.0",
]
